set language setting to java 11, use Set.of